Fix Responsive Scrollbar

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -1,23 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap");
 
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
-html, body, #root{
+html,
+body,
+#root{
     height: 100%;
     overflow: hidden;
 }
 
-a{
+
+a {
     color: inherit;
     text-decoration: none;
 }
 
-button{
+button {
     cursor: pointer;
     outline: none;
     border: 0;
