--- a/src/scss/base/_scrollbar.scss
+++ b/src/scss/base/_scrollbar.scss
@@ -1,11 +1,13 @@
-@import 'colors';
+@import "colors";
 
-::-webkit-scrollbar{
-	width: 10px;
-	background: transparent;
-}
+@media screen and (min-width: 1024px) {
+    ::-webkit-scrollbar {
+        width: 10px;
+        background: transparent;
+    }
 
-::-webkit-scrollbar-thumb{
-	border-radius: 10px;
-	background: $dark-green;
+    ::-webkit-scrollbar-thumb {
+        border-radius: 10px;
+        background: $dark-green;
+    }
 }
